--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>El Rincon del Carnicero</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El rincon del Carnicero</title>
+</head>
+<body>
+    <h1>El rincon del Carnicero</h1>
+</body>
+</html>
